--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@capacitor/android": "^4.7.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/camera": "^4.1.4",
-    "@capacitor/core": "4.7.0",
+    "@capacitor/core": "^4.7.1",
     "@capacitor/filesystem": "^4.1.4",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/ios": "^4.7.1",
     "@capacitor/keyboard": "4.1.1",
+    "@capacitor/preferences": "^4.0.1",
+    "@capacitor/push-notifications": "^4.0.1",
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
